fix(grid.css): set a min height to avoid Layout shift culprits

--- a/just_stream_it/css/component/grid.css
+++ b/just_stream_it/css/component/grid.css
@@ -1,5 +1,7 @@
 .grid {
     margin: var(--spacing-3xl) 0 var(--spacing-lg) 0;
+    min-height: 544px;
+    height: auto;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
